--- a/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
@@ -18,7 +18,8 @@
     <meta name="author" content="">
 
     <title>AgilizaScrum</title>
-
+    <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-drag-and-drop-lists.min.js"></script>
     <link rel="shortcut icon" href="~/favicon.ico">
 
     @Styles.Render("~/Bundles/App/vendor/css")
