--- a/src/AgilizaScrum.Web/App/Main/views/products/userStory/editStoryModal.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/userStory/editStoryModal.cshtml
@@ -15,7 +15,7 @@
                     <div class="col-sm-6">
                         <div class="form-group form-float">
                             <div class="form-line">
-                                <input id="name" type="text" name="Name" ng-model="vm.product.name" required maxlength="32" class="validate form-control">
+                                <input id="name" type="text" name="Name" ng-model="vm.story.name" required maxlength="32" class="validate form-control">
                                 <label for="name" class="form-label">@L("Name")</label>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                     <div class="col-sm-6">
                         <div class="form-group form-float">
                             <div class="form-line">
-                                <input id="surname" type="text" name="Surname" ng-model="vm.product.description" required maxlength="32" class="validate form-control">
+                                <input id="surname" type="text" name="Surname" ng-model="vm.story.description" required maxlength="32" class="validate form-control">
                                 <label for="surname" class="form-label">@L("Description")</label>
                             </div>
                         </div>
