--- a/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
@@ -2,7 +2,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div style="padding:10px" class="card header">
             <h2 style="float:left;;margin:0">
-                {{vm.product.name}}
+                <a ui-sref="products" ><i class="fa fa-arrow-left" aria-hidden="true"></i></a> {{vm.product.name}}
             </h2>
             <ul style="list-style:none;float:right;margin:0" class="header-dropdown m-r--5">
                 <i class="fa fa-spin fa-spinner" ng-if="vm.isTableLoading"></i>
@@ -62,8 +62,17 @@
     .item{
         margin: 5px;
     }
-    .item-product{
-        width:50%;
+    .item-product {
+        width: 50%;
+        vertical-align: top;
+    }
+
+    .content-story {
+        display: inline-block;
+        width: 180px;
+        white-space: nowrap;
+        overflow: hidden !important;
+        text-overflow: ellipsis;
     }
 </style>
 
@@ -89,12 +98,14 @@
 </script>
 
 <script type="text/ng-template" id="item.html">
-    <div ng-click="vm.openStoryModal(item)" class="card-user">
-        <h4>
+    <div style="word-wrap: break-word;"  class="card-user">
+        <span style="cursor:pointer;float:right;color:red"><i ng-click="vm.deleteStory(item)" class="fa fa-times" aria-hidden="true"></i></span>
+        <span style="cursor:pointer;float:right;color:blue;margin-right:5px"><i ng-click="vm.openStoryModal(item)" class="fa fa-pencil-square-o" aria-hidden="true"></i></span>
+        <h5>
             {{item.name}}
-        </h4>
+        </h5>
         <p>
-            {{item.description}}
+            <span class="content-story">{{item.description}}</span>
         </p>
     </div>
     @*<div class="item card-user">Item {{item.name}}</div>*@
