--- a/src/AgilizaScrum.Web/css/style.css
+++ b/src/AgilizaScrum.Web/css/style.css
@@ -2823,7 +2823,8 @@ section.content {
 
 .card-user {
     background: #fff;
-    min-height: 50px;
+    min-height: 120px;
+    max-height:120px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     position: relative;
     margin: 10px;
