--- a/src/AgilizaScrum.Web/App/Main/views/products/index.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/index.cshtml
@@ -19,20 +19,20 @@
             </div>
 
             <div class="row">
-                <div ng-repeat="product in vm.products" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" ui-sref="productEdit({id: product.id})">
-                    <div style="padding:5px">
-                        <div class="card-product">
-                            <h4>
-                                {{product.name}}
-                            </h4>
-                            <p>
-                                {{product.description}}
-                            </p>
+                <div ng-repeat="product in vm.products" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" >
+                    <a style="text-decoration:none;color:black" ui-sref="productEdit({id: product.id})" ui-sref-opts="{reload: true}">
+                        <div style="padding:5px">
+                            <div class="card-product">
+                                <h4>
+                                    {{product.name}}
+                                </h4>
+                                <p>
+                                    {{product.description}}
+                                </p>
+                            </div>
                         </div>
-                            
-                    </div>
-                       
-                </div>
+                    </a>
+                 </div>
             </div>
             <button type="button" data-toggle="modal" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right" ng-click="vm.openProductCreationModal()">
                 <i class="material-icons">add</i>
