--- a/src/AgilizaScrum.Web/App/Main/views/products/userStory/editStoryModal.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/userStory/editStoryModal.cshtml
@@ -10,28 +10,32 @@
     <div class="modal-body">
         <uib-tabset class="tab-container tabbable-line">
             <uib-tab heading="Details">
-               
                 <div class="row clearfix">
                     <div class="col-sm-6">
-                        <div class="form-group form-float">
+                        <div ng-if="vm.user==0" class="form-group form-float">
                             <div class="form-line">
                                 <input id="name" type="text" name="Name" ng-model="vm.story.name" required maxlength="50" class="validate form-control">
                                 <label for="name" class="form-label">@L("Name")</label>
                             </div>
                         </div>
+                        <div ng-if="vm.user!=0">
+                            {{vm.story.name}}
+                        </div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="form-group form-float">
+                        <div  ng-if="vm.user==0" class="form-group form-float">
                             <div class="form-line">
                                 <input id="surname" type="text" name="Surname" ng-model="vm.story.description" class="validate form-control">
                                 <label for="surname" class="form-label">@L("Description")</label>
                             </div>
                         </div>
+                        <div ng-if="vm.user!=0">
+                            {{vm.story.description}}
+                        </div>
                     </div>
                 </div>
-
             </uib-tab>
-            <uib-tab heading="User Roles">
+            @*<uib-tab heading="User Roles">
                 <div class="row">
                     <div class="col-sm-12 ">
                         <div class="col-sm-6" ng-repeat="role in vm.roles">
@@ -40,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-            </uib-tab>
+            </uib-tab>*@
         </uib-tabset>
     </div>
     <div class="modal-footer">
