priority logic for product backlog

--- a/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
@@ -102,6 +102,11 @@
         display: block;
         padding: 0px;
     }
+
+    ul li:last-child {
+        color: Red;
+    }
+
 </style>
 
 <script type="text/ng-template" id="list.html">
