select priority release

--- a/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
@@ -20,6 +20,10 @@
     <title>AgilizaScrum</title>
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/angular-drag-and-drop-lists.min.js"></script>
+    <script src="~/Scripts/select.js"></script>
+    <link href="~/Content/select.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <script src="~/Scripts/angular-sanitize.js"></script>
     <link rel="shortcut icon" href="~/favicon.ico">
 
     @Styles.Render("~/Bundles/App/vendor/css")
