--- a/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
@@ -42,8 +42,15 @@
                     <br>
                     <label>Name:</label>
                     <input type="text" ng-model="vm.release.name" class="form-control">
+                    <label>Priority:</label>
+                    <ui-select ng-model="vm.priorityRelease.selected" theme="bootstrap" title="Choose a person">
+                        <ui-select-match placeholder="Select a person...">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="person in vm.priorityRelease | filter: $select.search">
+                            <div ng-bind-html="person.name | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
                 </div>
-                <button type="submit" class="btn btn-primary waves-effect" ng-click="vm.releaseBacklog()">
+                <button ng-disabled="vm.priorityRelease.selected == null" type="submit" class="btn btn-primary waves-effect" ng-click="vm.releaseBacklog()">
                     +@L("Ship!")
                 </button>
                 @*<div class="body">*@
