--- a/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/layout/layout.cshtml
@@ -26,6 +26,9 @@
     <script src="~/Scripts/angular-sanitize.js"></script>
     <link rel="shortcut icon" href="~/favicon.ico">
 
+    @*Para paginção tem que baixar ainda%%%%%%%%%%%%%%%%%%%%%*@
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
     @Styles.Render("~/Bundles/App/vendor/css")
     @Styles.Render("~/Bundles/App/Main/css")
 
