--- a/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/products/editProduct.cshtml
@@ -110,9 +110,9 @@
         padding: 0px;
     }
 
-    ul li:last-child {
+    /*ul li:last-child {
         color: Red;
-    }
+    }*/
 
 </style>
 
@@ -128,28 +128,27 @@
             @*ng-include="item.type + '.html'">*@
             ng-include="'item.html'">
         </li>
-        <!-- pager -->
-        <div style="text-align:center">
-            <ul ng-if="vm.pager.pages.length" class="pagination">
-                <li ng-class="{disabled:vm.pager.currentPage === 1}">
-                    <a ng-click="vm.setPage(1)">First</a>
-                </li>
-                <li ng-class="{disabled:vm.pager.currentPage === 1}">
-                    <a ng-click="vm.setPage(vm.pager.currentPage - 1)">Previous</a>
-                </li>
-                <li ng-repeat="page in vm.pager.pages" ng-class="{active:vm.pager.currentPage === page}">
-                    <a ng-click="vm.setPage(page)">{{page}}</a>
-                </li>
-                <li ng-class="{disabled:vm.pager.currentPage === vm.pager.totalPages}">
-                    <a ng-click="vm.setPage(vm.pager.currentPage + 1)">Next</a>
-                </li>
-                <li ng-class="{disabled:vm.pager.currentPage === vm.pager.totalPages}">
-                    <a ng-click="vm.setPage(vm.pager.totalPages)">Last</a>
-                </li>
-            </ul>
-        </div>
     </ul>
-    
+    <!-- pager -->
+    <div ng-if="zone=='Product'" style="text-align:center">
+        <ul ng-if="vm.pager.pages.length" class="pagination">
+            <li ng-class="{disabled:vm.pager.currentPage === 1}">
+                <a ng-click="vm.setPage(1)">First</a>
+            </li>
+            <li ng-class="{disabled:vm.pager.currentPage === 1}">
+                <a ng-click="vm.setPage(vm.pager.currentPage - 1)">Previous</a>
+            </li>
+            <li ng-repeat="page in vm.pager.pages" ng-class="{active:vm.pager.currentPage === page}">
+                <a ng-click="vm.setPage(page)">{{page}}</a>
+            </li>
+            <li ng-class="{disabled:vm.pager.currentPage === vm.pager.totalPages}">
+                <a ng-click="vm.setPage(vm.pager.currentPage + 1)">Next</a>
+            </li>
+            <li ng-class="{disabled:vm.pager.currentPage === vm.pager.totalPages}">
+                <a ng-click="vm.setPage(vm.pager.totalPages)">Last</a>
+            </li>
+        </ul>
+    </div>
 </script>
 
 <script type="text/ng-template" id="container.html">
