--- a/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
@@ -30,6 +30,7 @@
             <div style="float:right;clear:both" ng-click="vm.rightClick()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
             <div style="float:left;clear:both" ng-click="vm.leftClick()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
         </div>
-           
-    </div>
+        <div class="card col-xs-4">
+
+        </div>
 </div>
