--- a/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
@@ -1,6 +1,5 @@
 ﻿<div class="row clearfix" ng-controller="app.views.sprints.sprintplanning.startSprint as vm">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        @*<div class="card main-content">*@
             <div style="padding:10px" class="card header">
                 <h2 style="float:left;;margin:0">
                     @L("SprintPlanning")
@@ -18,19 +17,43 @@
                 </ul>
             </div>
 
-            @*<button type="button" data-toggle="modal" class="btn btn-primary" ng-click="vm.openProductCreationModal()">
-                @L("StartSprint")
-            </button>*@
-        <div style="text-align:center" class="card col-xs-4">
-            <div style="display:inline-block" ng-repeat="release in vm.releases">
-                <div ng-show="vm.current==$index" ng-click="vm.currentMain=$index">
-                    <h3>{{release.name}}</h3>
+        <div class="col-xs-5">
+            <div style="text-align:center" class="card col-xs-12">
+                <div style="display:inline-block" ng-repeat="release in vm.releases">
+                    <div ng-show="vm.current==$index" ng-click="vm.currentMain=$index">
+                        <h5>{{release.name}}</h5>
+                    </div>
                 </div>
+                <div style="float:right;clear:both" ng-click="vm.rightClick()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+                <div style="float:left;clear:both" ng-click="vm.leftClick()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
             </div>
-            <div style="float:right;clear:both" ng-click="vm.rightClick()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
-            <div style="float:left;clear:both" ng-click="vm.leftClick()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
+            <div class="card col-xs-12">
+                <div ng-include="'list.html'"></div>
+            </div>
         </div>
-        <div class="card col-xs-4">
-
-        </div>
+    </div>
 </div>
+
+<script type="text/ng-template" id="list.html">
+    <ul style="padding:0" dnd-list="list">
+        <li class="list-item" ng-repeat="item in vm.stories"
+            dnd-draggable="item"
+            dnd-effect-allowed="move"
+            dnd-moved="list.splice($index, 1)"
+            dnd-selected="models.selected = item"
+            ng-class="{selected: models.selected === item}"
+            ng-include="'item.html'">
+        </li>
+    </ul>
+</script>
+
+<script type="text/ng-template" id="item.html">
+    <div style="word-wrap: break-word;">
+        <h5>
+            {{item.name}}
+        </h5>
+        <p>
+            <span class="content-story">{{item.description}}</span>
+        </p>
+    </div>
+</script>
