--- a/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/sprints/sprintplanning/startSprint.cshtml
@@ -17,22 +17,25 @@
                 </ul>
             </div>
 
-        <div class="col-xs-5">
+        <div class="col-xs-7">
             <div style="text-align:center;padding:14px" class="card col-xs-12">
                 <div style="display:inline-block" ng-repeat="release in vm.releases">
                     <div ng-show="vm.current==$index" ng-click="vm.currentMain=$index">
                         <h5 style="margin:0">{{release.name}}</h5>
                     </div>
                 </div>
-                <div style="float:right;" ng-click="vm.rightClick()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
-                <div style="float:left;" ng-click="vm.leftClick()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
+                <div style="float:right;cursor:pointer" ng-click="vm.rightClick()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+                <div style="float:left;cursor:pointer" ng-click="vm.leftClick()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
             </div>
             <div class="card col-xs-12">
                 <div ng-include="'list.html'"></div>
             </div>
         </div>
-        <div class="card col-xs-6">
+        <div style="text-align:center" class="card col-xs-4">
             <h3>Sprint</h3>
+            <button type="submit" class="btn btn-primary waves-effect" ng-click="vm.createSprint()">
+                +@L("Ship!")
+            </button>
             <div ng-include="'listSprint.html'"></div>
         </div>
     </div>
@@ -57,6 +60,7 @@
 
 <script type="text/ng-template" id="listSprint.html">
     <ul style="padding:0;list-style:none" dnd-list="vm.storiesSprint">
+        <li style="list-style:none;" ng-if="vm.storiesSprint.length == 0">Drop Stories Here!</li>
         <li style="display:inline-block;width:100%" class="list-item" ng-repeat="item in vm.storiesSprint"
             dnd-draggable="item"
             dnd-effect-allowed="move"
