--- a/src/AgilizaScrum.Web/App/Main/views/sprints/sprintbacklog/sprintbacklog.cshtml
+++ b/src/AgilizaScrum.Web/App/Main/views/sprints/sprintbacklog/sprintbacklog.cshtml
@@ -24,7 +24,7 @@
                 </ul>
             </div>
 
-            <div style="overflow-x:scroll;white-space:nowrap" class="row">
+            <div id="scroll" style="overflow-x:scroll;white-space:nowrap" class="row">
                 <div ng-repeat="sprint in vm.sprints" class="sprint" ui-sref="releaseInfo({id: release.id})">
                     <div style="padding:5px">
                         <div class="card-product">
@@ -46,23 +46,23 @@
         @*</div>*@
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.js" type="text/javascript"></script>
 <script>
-    $(window).bind('mousewheel', function (event, delta) {
-        console.log("adw");
-        if (delta > 0) {
-            window.scrollBy(-80, 0);
-        } else window.scrollBy(80, 0);
+    jQuery(function ($) {
+        $.fn.hScroll = function (amount) {
+            amount = amount || 120;
+            console.log("adswa");
+            $(this).bind("DOMMouseScroll mousewheel", function (event) {
+                var oEvent = event.originalEvent,
+                    direction = oEvent.detail ? oEvent.detail * -amount : oEvent.wheelDelta,
+                    position = $(this).scrollLeft();
+                position += direction > 0 ? -amount : amount;
+                $(this).scrollLeft(position);
+                event.preventDefault();
+            })
+        };
     });
-    $(function () {
 
-        $("body,*").mousewheel(function (event, delta) {
-            console.log("adw");
-            this.scrollLeft -= (delta * 30);
-
-            event.preventDefault();
-
-        });
-
+    $(document).ready(function () {
+        $('#scroll').hScroll(100); // You can pass (optionally) scrolling amount
     });
 </script>
